--- a/wp-content/themes/affstream/blocks/affstream-contacts/style.css
+++ b/wp-content/themes/affstream/blocks/affstream-contacts/style.css
@@ -149,6 +149,7 @@
 @media (max-width: 1599px) {
   .media-contacts .container .contact-card .position {
     margin-bottom: 10px;
+    max-width: 85%;
   }
 }
 @media (max-width: 1023px) {
